Removed use of ScriptRunner from TablesCreator. Using DataSource to execute statements